tests/PhiCore/compile_failure/src/Core/Integer.bool.fail.cpp
#include <Phi/Core/Integer.hpp>

int main()
{
    phi::Integer<bool> i{1};
}
